@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.web.reactive.result;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
@@ -25,12 +24,12 @@ import java.util.function.Supplier;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.core.Ordered;
 import org.springframework.core.ReactiveAdapter;
 import org.springframework.core.ReactiveAdapterRegistry;
 import org.springframework.http.MediaType;
-import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.MimeTypeUtils;
 import org.springframework.web.reactive.HandlerMapping;
@@ -49,7 +48,7 @@ import org.springframework.web.server.ServerWebExchange;
 public abstract class HandlerResultHandlerSupport implements Ordered {
 
 	private static final List<MediaType> ALL_APPLICATION_MEDIA_TYPES =
-			Arrays.asList(MediaType.ALL, new MediaType("application"));
+			List.of(MediaType.ALL, new MediaType("application"));
 
 
 	protected final Log logger = LogFactory.getLog(getClass());
@@ -105,8 +104,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	 * Get a {@code ReactiveAdapter} for the top-level return value type.
 	 * @return the matching adapter, or {@code null} if none
 	 */
-	@Nullable
-	protected ReactiveAdapter getAdapter(HandlerResult result) {
+	protected @Nullable ReactiveAdapter getAdapter(HandlerResult result) {
 		return getAdapterRegistry().getAdapter(result.getReturnType().resolve(), result.getReturnValue());
 	}
 
@@ -117,8 +115,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	 * @param producibleTypesSupplier the media types producible for the request
 	 * @return the selected media type, or {@code null} if none
 	 */
-	@Nullable
-	protected MediaType selectMediaType(ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier) {
+	protected @Nullable MediaType selectMediaType(ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier) {
 		return selectMediaType(exchange, producibleTypesSupplier, getAcceptableTypes(exchange));
 	}
 
@@ -126,8 +123,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	 * Variant of {@link #selectMediaType(ServerWebExchange, Supplier)} with a
 	 * given list of requested (acceptable) media types.
 	 */
-	@Nullable
-	protected MediaType selectMediaType(
+	protected @Nullable MediaType selectMediaType(
 			ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier,
 			List<MediaType> acceptableTypes) {
 
